<resources>
    <string name="app_name">My Application</string>
    <string name="centimeters">Centimeters</string>
    <string name="feet_inches"><![CDATA[Feet & Inches]]></string>
    <string name="convert">Convert</string>
    <string name="name">Name</string>
    <string name="meters">meters</string>
    <string name="pounds">Pounds</string>
    <string name="kilograms">Kilograms</string>
    <string name="piano">piano</string>
    <string name="add">Add</string>
    <string name="entry_to_add">Entry to add</string>
    <string name="add_to_end">Add to End</string>
    <string name="change_title">Change Title</string>
    <string name="title">Title</string>
    <string name="save">Save</string>
    <string name="add_item">Add Item</string>
    <string name="load">Load</string>
    <string name="add_to_spot">ADD TO SPOT</string>
    <string name="position_in_list">Position in list</string>
    <string name="remove_item" />
    <string name="remove">Remove</string>
    <string name="rank_to_remove">Rank to remove</string>
</resources>
